src/pages/problem/index/ProblemPage.module.less
.languageSelectIcon {
  margin-left: 10px;
  font-size: 17px;
  vertical-align: bottom;
}

.headerContainer {
  margin-top: 10px;
  margin-bottom: 37.5px;

  :global(.ui.label) {
    margin: 2px !important;
  }
}

.headerRightStatisticGroup {
  padding-top: 15px;
  white-space: nowrap;
  flex-wrap: nowrap !important;
  margin-left: auto !important;
  margin-right: auto !important;
  width: min-content;

  > :first-child {
    margin-left: 0 !important;
  }
}

.labels {
  margin-top: -2px;
  white-space: nowrap; // FIXME
}

.toggleTagsLabel {
  user-select: none;

  :global(.icon) {
    cursor: pointer;
    margin-right: 0 !important;
    margin-left: .5em !important;
    font-size: .92857143em !important;
    transition: transform .3s ease;
  }
}

.divider {
  margin: 0 -233333px 37.5px !important;
}

.leftContainer, .rightContainer {
  vertical-align: top;
}

.leftContainer {
  display: flex;
  flex-direction: column;
  padding-right: 1rem;

  .inSubmitView & {
    padding-right: 0;
  }
}

.rightContainer {
  align-self: end;
  padding-left: 1rem;
  position: sticky !important;
  top: -152px;
}

.inSubmitView .statementView {
  display: none;
}

.submitView {
  .inStatementView & {
    display: none;
  }

  flex-grow: 1;

  form {
    top: 0;
    left: 0;
    width: 100%;
    height: calc(100vh - 341px);
    min-height: 100%;

    textarea {
      border-radius: 0 !important;
      width: 100%;
      height: 100%;
      resize: none !important;
    }
  }
}

.submitViewForm, .submitButton {
  margin-top: 25px !important;
}

.actionMenusWrapper {
  margin-top: 85px !important;
}

.inStatementView .submitViewMenu, .inSubmitView .statementViewMenu {
  display: none;
}

.secondActionMenu {
  margin-top: 40px !important;

  &:empty {
    margin-top: 0 !important;
  }
}

.actionMenu {
  min-height: 0 !important;
  margin-bottom: 0 !important;

  border-right: none !important;
  border-left-width: 2px !important;
  border-left-style: solid !important;
  border-left-color: rgba(34, 36, 38, 0.15) !important;

  :global(.item) {
    border-right: none !important;
    border-left-style: solid !important;
    border-left-color: transparent !important;
    margin: 0 0 0 -2px !important;
    border-left-width: 2px !important;

    &.menuItemImportant {
      background: #2185d0 !important;
      color: #fff !important;
      border-left-color: rgba(255, 255, 255, 0.6) !important;

      &:hover {
        background: #1678c2 !important;
        color: #fff !important;
        border-left-color: rgba(255, 255, 255, 0.45) !important;
      }
    }

    &.menuItemDangerous {
      color: #db2828 !important;
      border-left-color: rgba(219, 40, 40, 0.5) !important;

      &:hover {
        background: rgba(219, 40, 40, 0.03) !important;
        color: #db2828 !important;
        border-left-color: #db2828 !important
      }
    }

    &.menuItemPrimary {
      background: rgba(40, 110, 219, 0.03) !important;
      color: #1678c2 !important;
      border-left-color: rgba(40, 110, 219, 0.5) !important;

      &:hover {
        background: rgba(40, 110, 219, 0.07) !important;
        color: #1678c2 !important;
        border-left-color: #1678c2 !important
      }
    }

    &:hover {
      color: rgba(0, 0, 0, 0.95) !important;
      border-color: rgba(0, 0, 0, 0.95) !important;
      background-color: rgba(0, 0, 0, 0.03) !important;
    }

    > :global(.icon) {
      float: none !important;
      margin: 0 1em 0 0 !important;
    }

    > :global(.loader) {
      right: 16px;
      left: unset !important;
      transform: translateY(-50%) !important;
    }
  }
}

.sample {
  display: inline-flex !important;
  flex-direction: column;
}

.sampleHeader {
  margin-bottom: 1.5px !important;
}

.sampleDataSegment {
  flex-grow: 1;
  margin-top: 0 !important;
}

.sampleDataPre {
  margin-top: 0;
  margin-bottom: 0;
}

.copySample {
  display: block;
  float: right;
  user-select: none;
}

.sampleExplanation {
  padding-top: 0 !important;
  padding-bottom: 0 !important;

  p {
    margin-bottom: 1em !important;

    &:empty {
      display: none;
    }
  }
}

// responsive

@actionMenuWidth: 260px;
@rightContainerWidth: calc(@actionMenuWidth + 1rem);

.leftContainer {
  width: calc(100% - @rightContainerWidth);
}

.rightContainer {
  width: @rightContainerWidth;
}

.actionMenu {
  width: @actionMenuWidth !important;
}

@media only screen and (min-width: 768px) {
  .flexContainer {
    display: flex;
    align-items: stretch;
  }
}

@media only screen and (max-width: 1023px) and (min-width: 768px) {
  @actionMenuWidth: 180px;
  @rightContainerWidth: calc(@actionMenuWidth + 1rem);

  .leftContainer {
    width: calc(100% - @rightContainerWidth);
  }
  
  .rightContainer {
    width: @rightContainerWidth;
  }
  
  .actionMenu {
    width: @actionMenuWidth !important;
  }

  .headerRightStatisticGroup > :global(.ui.statistic) {
    &:first-child {
      margin-right: 1em !important;
    }

    &:not(:first-child) {
      margin-left: 1em !important;
    }
  }
}

@media only screen and (max-width: 767px) {
  .headerContainer {
    margin-top: 12px;
    margin-bottom: 25px;
  }
  
  .labels {
    white-space: initial;
  }

  .divider {
    margin-bottom: 25px !important;
  }

  .leftContainer {
    width: 100%;
    padding-right: 0;
  }

  .submitView form {
    height: 50vh !important;
  }

  .sampleInput {
    padding-right: 0.5rem !important;
  }

  .sampleOutput {
    padding-left: 0.5rem !important;
  }

  .rightContainer {
    padding-left: 0;
    position: static !important;
    width: 100%;
  }

  .actionMenusWrapper {
    margin-top: 20px !important;
  }

  .secondActionMenu {
    margin-top: 30px !important;

    &:empty {
      margin-top: 0 !important;
    }
  }

  .actionMenu {
    width: 100% !important;
  }

  .dividerBottom {
    margin-top: 25px !important;
  }

  .headerRightStatisticGroup {
    .inSubmitView & {
      display: none !important;
    }

    padding-top: 4px;
    margin: 0 auto !important;
  }
}

